Bug 159452 - Ticked checkbox in document not shown in exported PDF
Summary: Ticked checkbox in document not shown in exported PDF
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0 target:24.2.1 target:7.6.5
Keywords: regression
: 159119 (view as bug list)
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2024-01-30 14:20 UTC by Miklos Vajna
Modified: 2024-02-01 12:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Reproducer document (12.04 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-01-30 14:20 UTC, Miklos Vajna
Details
Expected output (18.88 KB, application/pdf)
2024-01-31 08:37 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-01-30 14:20:36 UTC
Created attachment 192258 [details]
Reproducer document

Steps to reproduce:

1) Open the attached document

2) Export to PDF

3) Check the export result in Adobe Reader, Chrome or Okular

Expected result: the first checkbox is checked.

Actual result: the first checkbox is unchecked
Comment 1 BogdanB 2024-01-30 16:01:31 UTC
Confirm with
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c249e910992d5da840989a1f2bea9da1c6d0fcbb
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2024-01-30 18:56:42 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/256e2c679bcbb3ea446884d0ff4e3f8687b82ede

tdf#159452 sw content control, PDF export: fix checked checkboxes

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2024-01-30 19:05:47 UTC
I tested with (I built it since I saw your commit)
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 256e2c679bcbb3ea446884d0ff4e3f8687b82ede
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

And when opened with Document Viewer 42.3, it is not checked
Comment 4 BogdanB 2024-01-30 19:11:43 UTC
Miklos, this commit it is not working for me. I tried Restart in Safe Mode, and the same.
Comment 5 Miklos Vajna 2024-01-31 08:37:35 UTC
Created attachment 192279 [details]
Expected output

Attaching the good PDF output
Comment 6 Miklos Vajna 2024-01-31 08:37:46 UTC
I tested it in Adobe Reader, Chrome and KDE's okular, when I export attachment 192258 [details] to PDF when the result is a checked checkbox, but not without the above commit. Anything else I should try?
Comment 7 Xisco Faulí 2024-01-31 11:45:29 UTC
(In reply to BogdanB from comment #4)
> Miklos, this commit it is not working for me. I tried Restart in Safe Mode,
> and the same.

Hi Bodgan,
I think it depends on your PDF reader. For me, the fix works when checking with Firefox and Chrome but not with Evince. Reverting the patch exports the document without the checkbox ticked so I think this is an issue in Evince.

Verified in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b39c6082aa975ed8e5696c3dc24c3025ed07bbb6
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2024-01-31 11:49:47 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/e5f43ead6411e656f01e22b8e60b3e093cc391b0

tdf#159452 sw content control, PDF export: fix checked checkboxes

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Timur 2024-01-31 12:56:04 UTC
*** Bug 159119 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2024-01-31 14:53:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/98120818ebec99287f2eaee4146ab125c5ec470b

tdf#159452 sw content control, PDF export: fix checked checkboxes

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 BogdanB 2024-01-31 15:52:57 UTC
Just for record:
- It's ok with Chrome, Okular (after clicking Show forms), Firefox.
- It's NOT ok with Evince.

And in my case Evince was the first one I used to test.
Thanks for fixing this, Miklos.
Comment 12 Stéphane Guillou (stragu) 2024-02-01 12:41:47 UTC
As per commit comment, that was a regression from 9bad5be0ffdcdee92d40162b598ed2ab2815e5d5 in 7.5.

Thanks everyone!